[FIX] github logo shadow 수정 완료 & desc_wrap 반응형 center 수정

--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -174,8 +174,9 @@
   margin: 0 auto;
 }
 .repo_image {
-  width: 198px;
-  height: 198px;
+  width: 230px;
+  height: 200px;
+  filter: drop-shadow(0px 0px 5px rgba(0, 255, 21, 0.74));
 }
 
 /* main_company */
@@ -311,10 +312,10 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 0px;
+    align-items: center;
   }
   .desc_item {
     margin-bottom: 6vh;
-    width: 100%;
   }
   .desc_img {
     width: 100%;
@@ -356,8 +357,9 @@
   }
 
   .repo_image {
-    width: 25vw;
+    width: 30vw;
     height: 25vw;
+    filter: drop-shadow(0px 0px 1vw rgba(0, 255, 21, 0.74));
   }
 
   /* main_company */
